# cdr_ai

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  endpoints.py
app/core/: config.py  security.py
app/ml/: __init__.py  detector.py  post_process.py  recognizer.py
app/services/: __init__.py  ocr_service.py
app/utils/: __init__.py  image_processing.py  logger.py
data/flagged_human/: review_2.json  review_3.json  review_4.json  review_5.json
